crates/pardosa-schema/tests/compile_fail/serde_default.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
#[serde(default)]
struct Bad {
    x: u32,
    y: u32,
}
fn main() {}
